automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             Brooklyn, NY 11201
           </address>
         </div>
+      </div> <!-- wrapper -->
 
         <div class="col-1">
           <h3>Links</h3>
